--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             controls = new THREE.OrbitControls( camera, renderer.domElement );
             controls.addEventListener( 'change', render );
-            controls.enableZoom = false;
+            controls.enableZoom = true;
 
             var geometry = new THREE.BoxGeometry(1, 1, 1);
             var material = new THREE.MeshPhongMaterial({
@@ -67,14 +67,6 @@
             function render() {
                 renderer.render(scene, camera);
             }
-            /*
-            var frameId = 0;
-            function redraw() {
-                cancelAnimationFrame(frameId);
-                frameId = requestAnimationFrame(render);
-            }
-            redraw();
-            */
             window.addEventListener( 'resize', onWindowResize, false );
         }
         function onWindowResize() {
