--- a/canvas_interactive_voxelpainter.html
+++ b/canvas_interactive_voxelpainter.html
@@ -14,7 +14,7 @@
 		</style>
 	</head>
 	<body>
-
+		<h4>voxel based geometry kernel</h4> 
 		<script src="three.js"></script>
     <script src="OrbitControls.js"></script>
     <script src="stats.min.js"></script>
